feature(auth):login component
Create login page
Create login form
Write tests
Connect login page to redux
Write tests for reducers and actions

[Finishes #167230157]

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -305,6 +305,12 @@ input[type='submit']:active {
   transform: translateY(4px);
 }
 
+input[type='submit']:disabled {
+  background-color: #666667;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 input:focus {
   border: 1px solid blue;
 }
