--- a/src/components/App.css
+++ b/src/components/App.css
@@ -629,6 +629,19 @@ input.accnt-create-input {
   width: 90%;
 }
 
+.modal-open {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 .modal {
   display: none;
   position: fixed;
